--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>NiPay | #1 Fintech Startup Africa Rwanda - Best Investment Startups Africa</title>
+    <title>NiPay | Mobile wallet based SME credit </title>
     <meta name="description" content="NiPay is Africa's leading fintech startup providing instant mobile money loans to SMEs across Rwanda and East Africa. Top investment opportunity among African startups. SME grants, funds, and business loans for small companies. No paperwork, no collateral needed." />
     <meta name="author" content="NiPay Rwanda - Leading Fintech Startup Africa" />
     <meta name="keywords" content="NiPay Rwanda, NiPay Africa, fintech startup Rwanda, fintech startup Africa, best startups Rwanda, best startups Africa, startups Africa, startups East Africa, East Africa startups, startups to invest in Rwanda, startups to invest in Africa, places to invest Rwanda, places to invest Africa, mobile money Rwanda, mobile money Africa, SME finance Rwanda, SME finance Africa, fintech investment Africa, startup funding Africa, business loans Africa, MTN money loans, Airtel money credit, funds for SME Rwanda, grants for SMEs Rwanda, grants for small companies Rwanda, small business grants Africa, SME funding Africa" />
